--- a/.gitignore
+++ b/.gitignore
@@ -29,11 +29,6 @@ bld/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
-# Vs code
-**/.vscode/settings.json
-# Rider
-.idea/
-
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
@@ -60,6 +55,9 @@ BenchmarkDotNet.Artifacts/
 project.lock.json
 project.fragment.lock.json
 artifacts/
+
+# work xmls
+PBX.SEPA/2020-*/
 
 # StyleCop
 StyleCopReport.xml
@@ -343,6 +341,3 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
-*.db
-/src/WebApi/private-tact.pem
-/src/WebApi/public-tact.pem
